apps/the-commons/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: the-commons
spec:
  selector:
    app: the-commons
  ports:
    - name: http
      port: 80
      targetPort: http
